k8s/base/deployment-blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ppl-app-blue
  labels:
    app: ppl-app
    color: blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ppl-app
      color: blue
  template:
    metadata:
      labels:
        app: ppl-app
        color: blue
    spec:
      containers:
        - name: app
          image: docker.io/stevensetiawan1802/ppl-c-steven-app:v1.0.2
          ports:
            - containerPort: 8000
