k8s/base/deployment-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ppl-app-green
  labels:
    app: ppl-app
    color: green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ppl-app
      color: green
  template:
    metadata:
      labels:
        app: ppl-app
        color: green
    spec:
      containers:
        - name: app
          image: docker.io/stevensetiawankuliah/ppl-c-steven-app:1.0.4
          ports:
            - containerPort: 8000
