k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ppl-app
spec:
  type: NodePort
  selector:
    app: ppl-app
    color: blue
  ports:
    - port: 80
      targetPort: 8000
      nodePort: 30080
      protocol: TCP
      name: http
